included links for exercises

--- a/src/templates/feedback.html
+++ b/src/templates/feedback.html
@@ -93,7 +93,31 @@
                                     <h5><i class="fas fa-dumbbell"></i> Corrective Exercises</h5>
                                     <ul>
                                         {% for exercise in feedback.top_arm.improvement_points.corrective_exercises %}
-                                            <li>{{ exercise }}</li>
+                                            <li>
+                                                {% if "Shoulder External Rotation" in exercise %}
+                                                    <a href="https://youtu.be/4tpl-huz060?si=Uj9ehrl4DmzE60sV" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Windmills" in exercise %}
+                                                    <a href="https://youtu.be/ITSmgn_BQgY?si=pwrwzeCuV_IKQ41E" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Pullovers" in exercise %}
+                                                    <a href="https://youtu.be/FlS71yYOXKU?si=LJgWPYHlTLwQiOo-" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Single arm lat pullovers" in exercise %}
+                                                    <a href="https://youtu.be/ECjsD9qkmDQ?si=-4QqB3G-ZJByKF25" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Woodchoppers" in exercise %}
+                                                    <a href="https://youtu.be/iWxTGXIViro?si=pPOaHPHzN0_42KG1" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Landmine Rotations" in exercise %}
+                                                    <a href="https://youtu.be/e5DP6961WEk?si=YcTR9uJsG1rPaZIx" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Seated Wall Angels" in exercise %}
+                                                    <a href="https://youtu.be/FSzcrSnLygc?si=n0jj-TwysTixSvQa" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Hip Shift" in exercise %}
+                                                    <a href="https://youtu.be/lrGosTxWT6A?si=EQMcFwY0lDO-gNc_" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Elephant Walks" in exercise %}
+                                                    <a href="https://youtu.be/yKcrskOi8o0?si=68mXoJOnUoqGlJ3t" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Butt Walks" in exercise %}
+                                                    <a href="https://youtu.be/N2biBYmWTmM?si=JvhN0HwY9aTDzfR4" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% else %}
+                                                    {{ exercise }}
+                                                {% endif %}
+                                            </li>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -164,7 +188,31 @@
                                     <h5><i class="fas fa-dumbbell"></i> Corrective Exercises</h5>
                                     <ul>
                                         {% for exercise in feedback.bottom_arm.improvement_points.corrective_exercises %}
-                                            <li>{{ exercise }}</li>
+                                            <li>
+                                                {% if "Shoulder External Rotation" in exercise %}
+                                                    <a href="https://youtu.be/4tpl-huz060?si=Uj9ehrl4DmzE60sV" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Windmills" in exercise %}
+                                                    <a href="https://youtu.be/ITSmgn_BQgY?si=pwrwzeCuV_IKQ41E" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Pullovers" in exercise %}
+                                                    <a href="https://youtu.be/FlS71yYOXKU?si=LJgWPYHlTLwQiOo-" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Single arm lat pullovers" in exercise %}
+                                                    <a href="https://youtu.be/ECjsD9qkmDQ?si=-4QqB3G-ZJByKF25" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Woodchoppers" in exercise %}
+                                                    <a href="https://youtu.be/iWxTGXIViro?si=pPOaHPHzN0_42KG1" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Landmine Rotations" in exercise %}
+                                                    <a href="https://youtu.be/e5DP6961WEk?si=YcTR9uJsG1rPaZIx" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Seated Wall Angels" in exercise %}
+                                                    <a href="https://youtu.be/FSzcrSnLygc?si=n0jj-TwysTixSvQa" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Hip Shift" in exercise %}
+                                                    <a href="https://youtu.be/lrGosTxWT6A?si=EQMcFwY0lDO-gNc_" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Elephant Walks" in exercise %}
+                                                    <a href="https://youtu.be/yKcrskOi8o0?si=68mXoJOnUoqGlJ3t" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Butt Walks" in exercise %}
+                                                    <a href="https://youtu.be/N2biBYmWTmM?si=JvhN0HwY9aTDzfR4" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% else %}
+                                                    {{ exercise }}
+                                                {% endif %}
+                                            </li>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -233,7 +281,31 @@
                                     <h5><i class="fas fa-dumbbell"></i> Corrective Exercises</h5>
                                     <ul>
                                         {% for exercise in feedback.rotation.improvement_points.corrective_exercises %}
-                                            <li>{{ exercise }}</li>
+                                            <li>
+                                                {% if "Shoulder External Rotation" in exercise %}
+                                                    <a href="https://youtu.be/4tpl-huz060?si=Uj9ehrl4DmzE60sV" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Windmills" in exercise %}
+                                                    <a href="https://youtu.be/ITSmgn_BQgY?si=pwrwzeCuV_IKQ41E" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Pullovers" in exercise %}
+                                                    <a href="https://youtu.be/FlS71yYOXKU?si=LJgWPYHlTLwQiOo-" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Single arm lat pullovers" in exercise %}
+                                                    <a href="https://youtu.be/ECjsD9qkmDQ?si=-4QqB3G-ZJByKF25" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Woodchoppers" in exercise %}
+                                                    <a href="https://youtu.be/iWxTGXIViro?si=pPOaHPHzN0_42KG1" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Landmine Rotations" in exercise %}
+                                                    <a href="https://youtu.be/e5DP6961WEk?si=YcTR9uJsG1rPaZIx" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Seated Wall Angels" in exercise %}
+                                                    <a href="https://youtu.be/FSzcrSnLygc?si=n0jj-TwysTixSvQa" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Hip Shift" in exercise %}
+                                                    <a href="https://youtu.be/lrGosTxWT6A?si=EQMcFwY0lDO-gNc_" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Elephant Walks" in exercise %}
+                                                    <a href="https://youtu.be/yKcrskOi8o0?si=68mXoJOnUoqGlJ3t" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Butt Walks" in exercise %}
+                                                    <a href="https://youtu.be/N2biBYmWTmM?si=JvhN0HwY9aTDzfR4" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% else %}
+                                                    {{ exercise }}
+                                                {% endif %}
+                                            </li>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -306,7 +378,31 @@
                                     <h5><i class="fas fa-dumbbell"></i> Corrective Exercises</h5>
                                     <ul>
                                         {% for exercise in feedback.paddle_angle.improvement_points.corrective_exercises %}
-                                            <li>{{ exercise }}</li>
+                                            <li>
+                                                {% if "Shoulder External Rotation" in exercise %}
+                                                    <a href="https://youtu.be/4tpl-huz060?si=Uj9ehrl4DmzE60sV" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Windmills" in exercise %}
+                                                    <a href="https://youtu.be/ITSmgn_BQgY?si=pwrwzeCuV_IKQ41E" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Pullovers" in exercise %}
+                                                    <a href="https://youtu.be/FlS71yYOXKU?si=LJgWPYHlTLwQiOo-" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Single arm lat pullovers" in exercise %}
+                                                    <a href="https://youtu.be/ECjsD9qkmDQ?si=-4QqB3G-ZJByKF25" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Cable Woodchoppers" in exercise %}
+                                                    <a href="https://youtu.be/iWxTGXIViro?si=pPOaHPHzN0_42KG1" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Landmine Rotations" in exercise %}
+                                                    <a href="https://youtu.be/e5DP6961WEk?si=YcTR9uJsG1rPaZIx" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Seated Wall Angels" in exercise %}
+                                                    <a href="https://youtu.be/FSzcrSnLygc?si=n0jj-TwysTixSvQa" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Kettlebell Hip Shift" in exercise %}
+                                                    <a href="https://youtu.be/lrGosTxWT6A?si=EQMcFwY0lDO-gNc_" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Elephant Walks" in exercise %}
+                                                    <a href="https://youtu.be/yKcrskOi8o0?si=68mXoJOnUoqGlJ3t" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% elif "Butt Walks" in exercise %}
+                                                    <a href="https://youtu.be/N2biBYmWTmM?si=JvhN0HwY9aTDzfR4" target="_blank" class="exercise-link">{{ exercise }}</a>
+                                                {% else %}
+                                                    {{ exercise }}
+                                                {% endif %}
+                                            </li>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -806,6 +902,29 @@
     @keyframes spin {
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
+    }
+    .exercise-link {
+        color: #8B0000;
+        text-decoration: underline;
+        transition: color 0.2s ease;
+    }
+    
+    .exercise-link:hover {
+        color: #5a0000;
+    }
+    
+    .injury-link, .exercise-link {
+        display: inline-flex;
+        align-items: center;
+    }
+    
+    .injury-link:after, .exercise-link:after {
+        content: "\f08e";
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        margin-left: 5px;
+        font-size: 0.8em;
+        opacity: 0.7;
     }
 </style>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
