flow diagram change

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -26,7 +26,7 @@
 
         <h2>How Does VDBC Work</h2>
         <figure style="max-width: 80%; margin: 0 auto; text-align: center;">
-            <img src="{{ url_for('static', filename='Flowchart/VDBC_flow.png') }}" style="width: 100%; height: auto;">
+            <img src="{{ url_for('static', filename='Flowchart/VDBC_flow_no_background.png') }}" style="width: 100%; height: auto;">
             <figcaption style="margin-top: 5px;"><strong>Figure.1</strong> A high level overview of how VDBC work.</figcaption>
         </figure>
         <p>
